--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     {
       "matches": ["https://chatgpt.com/*"],
       "css": ["styles.css"],
-      "js": ["content.js"]
+      "js": ["dist/content.js"],
+      "type": "module"
     }
   ]
 }
